v:image : fix that scrollbar may keep shown in display mode

--- a/pages/show.css
+++ b/pages/show.css
@@ -2,6 +2,8 @@
 body.filled {
   font-size: 0;
   margin: 0;
+}
+body.filled:not(.viewer-open) {
   overflow: overlay;
 }
 .filled > img {
@@ -12,6 +14,10 @@ body.filled {
 }
 .zoom-in {
   cursor: zoom-in;
+}
+.filled.viewer-open .zoom-in {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 #bgLink {
